1. Collection API Улучшения[#171505]