@@ -1,10 +1,7 @@
 package ru.job4j.comparator;
 
 import org.junit.Test;
-import ru.job4j.tracker.Item;
 
-import java.io.ByteArrayOutputStream;
-import java.io.PrintStream;
 import java.util.*;
 
 import static org.hamcrest.core.Is.is;
@@ -15,34 +12,54 @@ public class SortUserTest {
     @Test
     public void whenSimpleUserSort() {
         SortUser sortUser = new SortUser();
-        User one = new User("Eva", 30);
-        User two = new User("Adam", 20);
-        User three = new User("third", 10);
-        Set<User> expect = new TreeSet<>(Arrays.asList(three, two, one));
-        Set<User> result = sortUser.sort(Arrays.asList(one, three, two));
+        Set<User> expect  = new TreeSet<>(
+                Set.of(
+                        new User("third", 10),
+                        new User("Adam", 20),
+                        new User("Eva", 30)
+                )
+        );
+        Set<User> result  = sortUser.sort(new ArrayList<>(
+                List.of(
+                        new User("Eva", 30),
+                        new User("third", 10),
+                        new User("Adam", 20)
+                )
+        ));
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortByNameLength() {
         SortUser sortUser = new SortUser();
-        User one = new User("Eva", 30);
-        User two = new User("Adam", 20);
-        User three = new User("third", 10);
-        List<User> expect = new ArrayList<>(Arrays.asList(one, two, three));
-        List<User> result = sortUser.sortNameLength(Arrays.asList(two, three, one));
+        List<User> expect = new ArrayList<>(List.of(
+                new User("Eva", 30),
+                new User("Adam", 20),
+                new User("third", 10)
+        ));
+        List<User> result = sortUser.sortNameLength(new ArrayList<>(List.of(
+                new User("Adam", 20),
+                new User("third", 10),
+                new User("Eva", 30)
+        )));
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortByAllFields() {
         SortUser sortUser = new SortUser();
-        User one = new User("Сергей", 25);
-        User two = new User("Иван", 30);
-        User three = new User("Сергей", 20);
-        User fouth = new User("Иван", 25);
-        List<User> expect = new ArrayList<>(Arrays.asList(fouth, two, three, one));
-        List<User> result = sortUser.sortByAllFields(new ArrayList<>(Arrays.asList(one, two, three, fouth)));
+        List<User> expect = new ArrayList<>(List.of(
+                new User("Иван", 25),
+                new User("Иван", 30),
+                new User("Сергей", 20),
+                new User("Сергей", 25)
+        ));
+        List<User> result = sortUser.sortByAllFields(new ArrayList<>(List.of(
+                new User("Сергей", 25),
+                new User("Иван", 30),
+                new User("Сергей", 20),
+                new User("Иван", 25)
+        )));
         assertThat(result, is(expect));
     }
 }
